MDL-35583 - Forum's discussion table header right align fix

--- a/theme/canvas/style/mods.css
+++ b/theme/canvas/style/mods.css
@@ -33,6 +33,7 @@
     text-align: left;
     border-right: 1px solid #ddd;
 }
+.path-mod-forum.dir-rtl .forumheaderlist th {text-align: right;}
 
 .forumnodiscuss,
 .path-mod-forum .forumheaderlist .replies {
